--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
   <section>
     <h2>Things I Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Music</li>
+      <li>Movies</li>
+      <li>Pasta</li>
     </ul>
   </section>
 
   <section>
     <h2>Things I Don't Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Peach</li>
+      <li>Marisco</li>
+      <li>Pale Yellow</li>
     </ul>
   </section>
 </body>
